{
  "@@locale": "en",
  "appTitle": "Kite",
  "chatsTitle": "Chats",
  "encryptedConversation": "Encrypted conversation",
  "messageCopied": "Message copied",
  "messageDeleted": "Message deleted",
  "editedLabel": "edited",
  "sendingLabel": "Sending",
  "sentLabel": "Sent",
  "retrySendingLabel": "Retry sending",
  "messageFailedRetryLabel": "Message failed. Retry sending",
...
